[package]
authors = ["Harris Temuri <harris.temuri@gmail.com>"]
categories = ["hardware-support", "api-bindings", "parsing"]
description = "IPMI client library for rust"
edition = "2021"
exclude = ["/src/main.rs", "images/*", "docs/*", ".gitignore", ".cargo/*"]
keywords = ["ipmi", "rmcp"]
license = "GPL-3.0-or-later"
name = "rust-ipmi"
readme = "README.md"
repository = "https://github.com/htemuri/rust-ipmi/"
version = "0.1.1"

[dependencies]
aes = "0.8.3"
bitflags = "2.4.2"
cbc = "0.1.2"
clap = {version = "4.3.24", features = ["derive"]}
hmac = "0.12.1"
hmac-sha1 = "0.2.2"
lazy_static = "1.4.0"
log = "0.4.20"
nonmax = "0.5.5"
rand = "0.8.5"
serde = {version = "1.0.183", features = ["derive"]}
serde_json = "1.0.105"
sha2 = "0.10.8"
thiserror = "1"
tokio = {version = "1.32.0", features = ["full"]}
toml = "0.7.6"

[dev-dependencies]
chrono = "0.4.35"
env_logger = "0.11.3"
